[package]
name = "filehider"
version = "1.0.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.6", features = ["derive"] }
notify = "5.1.0"
walkdir = "2.3.2"
winapi = "0.3.9"